# assethub

./: README.md  architecture_and_tech_stack.md  main.py  mvp_development_plan.md  pyproject.toml
assethub/catalog/: indexer.py  scanner.py  search.py
assethub/core/: config.py  models.py
assethub/integration/: __init__.py
assethub/integration/providers/: base.py  cgtrader.py  free3d.py  polyhaven.py  turbosquid.py
assethub/plugin/: max_integration.py
assethub/tests/: test_core.py  test_integration.py
assethub/ui/: app.py
docs/: developer_guide.md  technical_documentation_ru.md  user_manual_ru.md
