[tool.poetry]
name = "assethub"
version = "0.1.0"
description = "Universal asset management platform for 3ds Max"
authors = ["AssetHub Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
sqlalchemy = "^2.0.0"
whoosh = "^2.7.4"
pyside6 = "^6.5.0"
pillow = "^10.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
trimesh = "^3.22.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
